--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-	"ip":"RaidTheWeb.aternos.me",
-	"port": "30934",
-	"name": "RaidTheWeb"
+	"ip":"52.170.193.29",
+	"port": "58015",
+	"name": "GnatBot101"
 }
